# MITP_GUI

./: .apply-clang-format.sh  .clang-format  CMakeLists.txt  conanfile.txt  main.cpp
event_listener/: controls_listener.cpp  controls_listener.hpp  keyboard_listener.cpp  keyboard_listener.hpp
widget/: text_area.cpp  text_area.hpp
